--- a/MyPortfolio22/index.html
+++ b/MyPortfolio22/index.html
@@ -36,7 +36,7 @@
 					<header>
 						<h1>Hi. I'm <strong>Elizabeth Antony</strong>.</h1>
 					</header>
-					<p>I am a Fullstack Software Developer with 6 years of experience in developing Responsive Web Applications using Html, CSS, JavaScript and object-oriented programming.</p>
+					<p>I am a Web Software Developer with 6 years of experience in developing Responsive Web Applications using Html, CSS, JavaScript and object-oriented programming.</p>
 					<a href="#work" class="button large scrolly">Learn about what I do</a>
 				</div>
 			</div>
